[gd_scene load_steps=34 format=3 uid="uid://ddecd0lmkf8n8"]

[ext_resource type="Script" uid="uid://cey2vtvgfp6sf" path="res://Assets/Scripts/PeaShooter.gd" id="1_f65rf"]
[ext_resource type="Texture2D" uid="uid://sq0nfnvxomqi" path="res://Pixel Adventure 2/Enemies/Plant/Attack (44x42).png" id="2_lctim"]
[ext_resource type="Texture2D" uid="uid://do7isysas8n46" path="res://Pixel Adventure 2/Enemies/Plant/Hit (44x42).png" id="3_p2coa"]
[ext_resource type="Texture2D" uid="uid://b1bsu1xn76o7y" path="res://Pixel Adventure 2/Enemies/Plant/Idle (44x42).png" id="4_nrxo4"]
[ext_resource type="AudioStream" uid="uid://uqbsfdjtn5ho" path="res://Assets/Audio/Hit damage 1.wav" id="5_lctim"]
[ext_resource type="AudioStream" uid="uid://dl3gjoowqsjn" path="res://Assets/Audio/Balloon Pop 1.wav" id="5_p2coa"]

[sub_resource type="AtlasTexture" id="AtlasTexture_lctim"]
atlas = ExtResource("3_p2coa")
region = Rect2(176, 0, 44, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_p2coa"]
atlas = ExtResource("3_p2coa")
region = Rect2(132, 0, 44, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_nrxo4"]
atlas = ExtResource("3_p2coa")
region = Rect2(88, 0, 44, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_tampw"]
atlas = ExtResource("3_p2coa")
region = Rect2(44, 0, 44, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_c2dxr"]
atlas = ExtResource("3_p2coa")
region = Rect2(0, 0, 44, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_bapla"]
atlas = ExtResource("4_nrxo4")
region = Rect2(0, 0, 44, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_pb8v7"]
atlas = ExtResource("4_nrxo4")
region = Rect2(44, 0, 44, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_x3ols"]
atlas = ExtResource("4_nrxo4")
region = Rect2(88, 0, 44, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_8pmnv"]
atlas = ExtResource("4_nrxo4")
region = Rect2(132, 0, 44, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_a2nxb"]
atlas = ExtResource("4_nrxo4")
region = Rect2(176, 0, 44, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_b7xmx"]
atlas = ExtResource("4_nrxo4")
region = Rect2(220, 0, 44, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_a14sq"]
atlas = ExtResource("4_nrxo4")
region = Rect2(264, 0, 44, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_dlm82"]
atlas = ExtResource("4_nrxo4")
region = Rect2(308, 0, 44, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_6o8fp"]
atlas = ExtResource("4_nrxo4")
region = Rect2(352, 0, 44, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_us81e"]
atlas = ExtResource("4_nrxo4")
region = Rect2(396, 0, 44, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_mlf8v"]
atlas = ExtResource("4_nrxo4")
region = Rect2(440, 0, 44, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_jhh15"]
atlas = ExtResource("2_lctim")
region = Rect2(308, 0, 44, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_vtl4r"]
atlas = ExtResource("2_lctim")
region = Rect2(264, 0, 44, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_50m7h"]
atlas = ExtResource("2_lctim")
region = Rect2(220, 0, 44, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_8oqa3"]
atlas = ExtResource("2_lctim")
region = Rect2(176, 0, 44, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_yq5x7"]
atlas = ExtResource("2_lctim")
region = Rect2(132, 0, 44, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_k7wpu"]
atlas = ExtResource("2_lctim")
region = Rect2(88, 0, 44, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_7x0o6"]
atlas = ExtResource("2_lctim")
region = Rect2(44, 0, 44, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_b6tad"]
atlas = ExtResource("2_lctim")
region = Rect2(0, 0, 44, 42)

[sub_resource type="SpriteFrames" id="SpriteFrames_r66tx"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_lctim")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p2coa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nrxo4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tampw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c2dxr")
}],
"loop": false,
"name": &"Death",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bapla")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pb8v7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x3ols")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8pmnv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a2nxb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b7xmx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a14sq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dlm82")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6o8fp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_us81e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mlf8v")
}],
"loop": true,
"name": &"Idle",
"speed": 20.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jhh15")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vtl4r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_50m7h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8oqa3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yq5x7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k7wpu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7x0o6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b6tad")
}],
"loop": false,
"name": &"Shoot",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_my4xa"]
size = Vector2(20, 35)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wbd4g"]
size = Vector2(6, 10)

[node name="Plant" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 7
platform_floor_layers = 4294967044
platform_wall_layers = 4
script = ExtResource("1_f65rf")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_r66tx")
animation = &"Idle"
autoplay = "Idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(3, 2.5)
shape = SubResource("RectangleShape2D_my4xa")

[node name="ShootTimer" type="Timer" parent="."]

[node name="ShootSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_p2coa")
volume_db = 10.0

[node name="DeathSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_lctim")
volume_db = 20.0

[node name="ShootPosition" type="Node2D" parent="."]
position = Vector2(-6, -5)

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(-7, -6)
shape = SubResource("RectangleShape2D_wbd4g")

[node name="VisionRayCast" type="RayCast2D" parent="."]
position = Vector2(0, 12)
target_position = Vector2(-35, 0)

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="timeout" from="ShootTimer" to="." method="_on_shoot_timer_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_top_area_body_entered"]
